fix: void.class NPE crash and duplicate-signature precedence bug
Independent code-review and QA sub-agent passes both surfaced real
defects, verified myself (reproduced each with a test before fixing,
not taken on faith):

- ForbiddenApiChecker crashed with an NPE on any compilation unit
  containing a primitive/void class literal (e.g. `void.class`), with
  zero signatures configured - ASTHelpers.enclosingClass() returns null
  for that synthetic FIELD symbol's owner, unlike every other field/
  enum-constant symbol. Fixed with a narrowly-scoped null check at that
  one reachable call site (not a broader defensive change, to avoid
  introducing untestable branches at the other, non-reachable sites).
- ForbiddenApiMatcher's duplicate-signature precedence was inconsistent
  with its own documented "later wins" contract: true for class/field
  (map-keyed) but backwards for package/method/constructor (list-keyed,
  first-match-wins) - meaning a user's Signatures= file could override a
  bundle's class/field ban but never its package/method/constructor ban.
  Fixed by scanning those lists in reverse order.
- Minor: double-closed bundle resource stream; missing defensive copy
  on two of ForbiddenApiMatcher's fields.
- -Dquick test was crashing Surefire outright (found by the QA agent):
  the argLine's @{argLine} token stays unresolved when jacoco:prepare-
  agent doesn't run, and java then tries to open it as an @argfile.
  Fixed with an empty default <argLine/> property.
- Verified (not just trusted) that Java 21+ pattern-matching switch
  case labels route through IdentifierTreeMatcher correctly; removed
  the now-incorrect "unverified" README caveat.

Also adds the Maven consumer example (examples/consumer-example) and
~20 QA-authored regression tests for previously-untested constructs
(generic erasure, varargs/array matching, inherited methods, records,
var locals, sealed permits, suppression, and more) that all passed
as-is and are kept as permanent coverage under 